@@ -1,3 +1,8 @@
+2001-07-19  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-dir.c (capplet_control_launch): Don't give an error if
+	the property control is NULL
+
 2001-07-19  Richard Hestilow  <hestilow@ximian.com>
 
 	* forgot to commit the pngs
